--- a/Skilled & Achievement.html
+++ b/Skilled & Achievement.html
@@ -21,7 +21,7 @@
 			<div class="fix maincontent">
 				<div class="fix menu">
 					<ul>
-						<li><a href="Home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="About me.html">About me</a></li>
 						<li><a href="Skilled & Achievement.html">Skilled & Achievement</a></li>
 						<li><a href="Experiences.html">Experiences</a></li>
@@ -53,7 +53,7 @@
 							<p>Completed Bachelor of Information Technology</p>
 							<p>Charles Darwin University, Darwin, Australia</p>
 							<p>2012</p>
-							<p>Completed Bachelor of Accounting</p> 
+							<p>Completed Bachelor of Accounting</p>
 							<p>Charles Darwin University, Darwin, Australia</p>
 							<p>2009:</p>
 							<p>Completed Certificate lV in financial services (Accounting)</p>
